# Parker

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  app.manifest  build.ps1  build.rs  install.ps1  resources.rc  run-dev.ps1  settings.env.example  setup-gui.ps1  setup.cmd  uninstall.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PUBLISHING.md  REFERENCES.md  ROADMAP.md  SETUP.md
scripts/: check.ps1  package-release.ps1
src/: clipboard.rs  config_ui.rs  dashboard.rs  input_capture.rs  main.rs  ocr.rs  qr.rs  recorder.rs  recording_indicator.rs  screenshot.rs  scroll_capture.rs  selector.rs  settings.rs  signals.rs  toast.rs  tray.rs  updater.rs  win.rs
