[package]
name = "parker"
version = "0.4.0"
edition = "2021"
authors = ["Akuma Nomu"]
description = "A Windows capture utility for smart OCR, QR actions, and region video recording"
readme = "README.md"
license = "MIT"
keywords = ["windows", "screen-recording", "ocr", "qrcode", "clipboard"]
categories = ["multimedia::video", "multimedia::images", "os::windows-apis"]
publish = false

[dependencies]
image = { version = "0.25", default-features = false, features = ["bmp", "png"] }
rqrr = { version = "0.10.1", default-features = false, features = ["img"] }
self_update = "0.6"
inquire = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional site-retriever feature (adds web-crawl + renderer support)
reqwest = { version = "0.11", optional = true, features=["rustls-tls"] }
kuchiki = { version = "0.8", optional = true }
headless_chrome = { version = "1", optional = true }
regex = { version = "1", optional = true }
quick-xml = { version = "0.29", optional = true }

[features]
site_retriever = ["reqwest", "kuchiki", "regex", "quick-xml"]
rendered = ["headless_chrome"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[build-dependencies]
embed-resource = "3.0"
